--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
 
   </head>
-  <body>
+  <body style="background-color:black;>
     <script src="sketch.js"></script>
       <iframe src="https://editor.p5js.org/JustARandomDude4/full/gW8DKU_o1"></iframe>
   
